[package]
name = "tree-create"
version = "0.1.0"
edition = "2021"
description = "A utility to create directory structures from a tree-like text input"
license = "MIT"
repository = "https://github.com/codyw912/tree-create"
readme = "README.md"
keywords = ["cli", "filesystem", "directory", "tree"]
categories = ["command-line-utilities"]

[dependencies]

[dev-dependencies]
tempfile = "3.2"
